force-app/main/default/objects/MyProduct__c/fields/ProductTitle__c.field-meta.xml
<CustomField>
    <fullName>ProductTitle__c</fullName>
    <label>ProductTitle</label>
    <length>50</length>
    <type>Text</type>
</CustomField>