force-app/main/default/objects/MyProduct__c/validationRules/Brand_rules.validationRule-meta.xml
<ValidationRule>
    <fullName>Brand_rules</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Brand__c,&quot;&quot;)</errorConditionFormula>
    <errorDisplayField>Brand__c</errorDisplayField>
    <errorMessage>Please select a brand</errorMessage>
</ValidationRule>