force-app/main/default/objects/MyProduct__c/validationRules/ProductTitle_rules.validationRule-meta.xml
<ValidationRule>
    <fullName>ProductTitle_rules</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(ProductTitle__c)</errorConditionFormula>
    <errorDisplayField>ProductTitle__c</errorDisplayField>
    <errorMessage>Product Title is required</errorMessage>
</ValidationRule>