force-app/main/default/objects/MyProduct__c/validationRules/Stock_rules.validationRule-meta.xml
<ValidationRule>
    <fullName>Stock_rules</fullName>
    <active>true</active>
    <errorConditionFormula>NOT( AND( Stock__c  &gt;= 10, Stock__c  &lt;= 80) )</errorConditionFormula>
    <errorDisplayField>Stock__c</errorDisplayField>
    <errorMessage>Stock must be in range  of 10 to 80.</errorMessage>
</ValidationRule>