force-app/main/default/objects/MyProduct__c/validationRules/UnitPrice_rules.validationRule-meta.xml
<ValidationRule>
    <fullName>UnitPrice_rules</fullName>
    <active>true</active>
    <errorConditionFormula>NOT((UnitPrice__c   &gt;= 45000  &amp;&amp;  UnitPrice__c   &lt;=  100000))</errorConditionFormula>
    <errorDisplayField>UnitPrice__c</errorDisplayField>
    <errorMessage>UnitPrice must be between 45000 to 100000</errorMessage>
</ValidationRule>