force-app/main/default/objects/MyProduct__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>ProductTitle__c</columns>
    <columns>Brand__c</columns>
    <columns>UnitPrice__c</columns>
    <columns>Stock__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>